--- a/style.css
+++ b/style.css
@@ -419,14 +419,10 @@ big {
   font-size: 125%; }
 
 .site-footer {
-  font-size: 10px;
-  font-size: 0.625rem;
+  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 24px;
   line-height: 1.5rem; }
-  .site-footer.band a:link {
-    color: white;
-    text-decoration: none;
-    background-color: clear !important; }
 
 /*--------------------------------------------------------------
 # Elements
@@ -572,7 +568,7 @@ input[type="reset"],
 input[type="submit"] {
   border: 0px solid;
   border-color: #ccc #ccc #bbb;
-  background: #E0542E;
+  background: #F96B24;
   color: white;
   font-size: 19px;
   font-size: 1.2rem;
@@ -685,6 +681,11 @@ a {
   a:hover, a:active {
     outline: 0; }
 
+.site-footer.band a {
+  color: white !important;
+  text-decoration: none;
+  background-color: clear !important; }
+
 .band a {
   color: #17aeac; }
   .band a:visited {
@@ -739,7 +740,6 @@ a {
       padding-left: 21.9403%;
       padding-right: 21.9403%; } }
   .main-navigation > div {
-    min-width: 600px;
     float: right; }
   .main-navigation ul {
     display: none;
@@ -802,8 +802,8 @@ a {
       max-width: 25px;
       line-height: 25px;
       position: absolute;
-      background-color: #3A3A3A;
-      color: #3A3A3A;
+      background-color: #F96B24;
+      color: #F96B24;
       margin-top: -36px;
       margin-top: -2.25rem;
       margin-bottom: 0px;
@@ -837,11 +837,13 @@ a {
     margin-right: 0; } }
 .menu-toggle,
 .main-navigation.toggled ul {
-  display: block;
-  position: static; }
-  .menu-toggle li,
-  .main-navigation.toggled ul li {
+  display: inline-block; }
+  .menu-toggle > li,
+  .main-navigation.toggled ul > li {
     float: none; }
+  .menu-toggle .current_page_item a:before,
+  .main-navigation.toggled ul .current_page_item a:before {
+    display: none; }
 
 @media (min-width: 640px) {
   .menu-toggle {
@@ -1062,14 +1064,6 @@ a {
     font-size: 1.25rem;
     line-height: 29px;
     line-height: 1.8rem; }
-  #masthead .site-description-page {
-    font-family: "Fira Sans", Impact, Charcoal, sans-serif;
-    color: #0B5453;
-    width: 85.77689%;
-    float: right;
-    margin-right: 0;
-    margin-top: -60px;
-    margin-top: -3.75rem; }
 
 .site-logo-wrapper {
   -webkit-box-sizing: content-box;
@@ -1110,11 +1104,41 @@ a {
     .site-logo-wrapper {
       padding-left: 21.9403%;
       padding-right: 21.9403%; } }
-  @media (min-width: 479px) {
-    .site-logo-wrapper .site-logo {
-      width: 37.31343%;
-      float: left;
-      margin-right: 0.29851%; } }
+  .site-logo-wrapper .site-logo {
+    margin-left: -9.70149%; }
+    @media (min-width: 479px) {
+      .site-logo-wrapper .site-logo {
+        width: 300px;
+        width: 18.75rem;
+        float: left;
+        margin-right: 0.29851%; } }
+  .site-logo-wrapper .site-description-page {
+    font-family: "Fira Sans", Impact, Charcoal, sans-serif;
+    color: #0B5453; }
+    .site-logo-wrapper .site-description-page p {
+      margin: 0; }
+    @media (max-width: 639px) {
+      .site-logo-wrapper .site-description-page {
+        clear: both;
+        width: 100%;
+        float: left;
+        margin-left: 0;
+        margin-right: 0; } }
+    @media (min-width: 639px) and (max-width: 769px) {
+      .site-logo-wrapper .site-description-page {
+        left: 19.76119%;
+        position: absolute;
+        top: 150px;
+        right: 0; } }
+    @media (min-width: 769px) {
+      .site-logo-wrapper .site-description-page {
+        left: 19.76119%;
+        position: absolute;
+        top: 150px;
+        right: 0; } }
+    @media (min-width: 1079px) {
+      .site-logo-wrapper .site-description-page {
+        left: 26.65672%; } }
 
 #footer-text-right {
   float: right; }
@@ -1126,17 +1150,41 @@ footer.site-footer {
   padding-bottom: 3rem;
   color: white;
   background-color: #3A3A3A; }
+  .home-page footer.site-footer {
+    padding-top: 0px;
+    padding-top: 0rem;
+    padding-bottom: 48px;
+    padding-bottom: 3rem; }
   footer.site-footer #social-buttons {
-    width: 24.77612%;
-    float: left;
-    margin-right: 0.29851%;
     padding-top: 7px;
-    padding-top: 0.45rem; }
-    footer.site-footer #social-buttons img {
-      margin-left: 10px;
-      margin-left: 0.625rem;
-      margin-right: 5px;
-      margin-right: 0.3125rem; }
+    padding-top: 0.45rem;
+    clear: both;
+    width: 100%;
+    float: left;
+    margin-left: 0;
+    margin-right: 0; }
+    @media (min-width: 639px) {
+      footer.site-footer #social-buttons {
+        width: 24.77612%;
+        float: left;
+        margin-right: 0.29851%; } }
+  footer.site-footer .sl {
+    display: inline-block;
+    line-height: 45px;
+    width: 45px;
+    font-size: 25px;
+    vertical-align: top;
+    font-family: "Fira Sans", Impact, Charcoal, sans-serif;
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    background-color: #F96B24;
+    margin: 0 1rem 1rem 0; }
   footer.site-footer .site-info {
     width: 18.50746%;
     float: right;
@@ -1178,6 +1226,11 @@ footer.site-footer {
     #footer-var {
       padding-left: 21.9403%;
       padding-right: 21.9403%; } }
+  .home-page #footer-var {
+    padding-top: 48px;
+    padding-top: 3rem;
+    padding-bottom: 48px;
+    padding-bottom: 3rem; }
 
 #sidebar-footer {
   padding-top: 14px;
